commit interarrival note-testcommit

--- a/bank_customer.ipynb
+++ b/bank_customer.ipynb
@@ -39,7 +39,11 @@
     "\n",
     "Stores\n",
     "Containers\n",
-    "Resources\n"
+    "Resources\n",
+    "\n",
+    "\n",
+    "The capacity of resource means how many people can simultaneously use the resource or how many times the resource can be used.\n",
+    "for simple resource i think,  capacity refers to simultaneous use of the resource.  Does this mean if capacity=3 means there are 3 resources created of this type."
    ]
   },
   {
@@ -78,6 +82,16 @@
     "    for i in range(N):\n",
     "        env.process( customer(f'customer-{i}', res)    )\n",
     "        yield env.timeout(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 2 important things to consider for input:\n",
+    "1.InterArrivalTime distribution\n",
+    "2.ServiceTime distribution\n",
+    "\n"
    ]
   },
   {
